Updated page TechDraw 2PointCosmeticLine/fr

--- a/wiki/fr/TechDraw_2PointCosmeticLine.html
+++ b/wiki/fr/TechDraw_2PointCosmeticLine.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2PointCosmeticLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2PointCosmeticLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw 2PunkteHilfslinie (74% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PunkteHilfslinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2PointCosmeticLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCosmeticLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea cosmetica per 2 punti (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj lini&#281; kosmetyczn&#261; wytyczon&#261; przez dwa punkty (74% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj lini&#281; kosmetyczn&#261; wytyczon&#261; przez dwa punkty (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2-&#1084;&#1103; &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (26% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#51216; &#44984;&#48136;&#49440; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/fr">Ligne centrale entre 2 points</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">Apparence des lignes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -152,35 +150,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145948
+Cached time: 20260117132911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 423/1000000
-Post&#8208;expand include size: 27579/2097152 bytes
-Template argument size: 10666/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 422/1000000
+Post&#8208;expand include size: 27573/2097152 bytes
+Template argument size: 10662/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1757/5000000 bytes
+Unstrip post&#8208;expand size: 1767/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.188      1 -total
- 25.39%    6.396      1 Template:TechDraw_Tools_navi/fr
- 18.61%    4.687      2 Template:Navigation_menu_2
- 12.21%    3.075      2 Template:Docnav/fr
- 11.49%    2.894      1 Template:Userdocnavi/fr
- 11.47%    2.889      1 Template:GuiCommand/fr
- 10.09%    2.542      1 Template:Version/fr
-  5.55%    1.397      2 Template:Incode
-  5.30%    1.335      1 Template:Caption
-  4.78%    1.205      2 Template:MenuCommand
+100.00%   30.214      1 -total
+ 26.00%    7.857      1 Template:TechDraw_Tools_navi/fr
+ 18.82%    5.687      2 Template:Navigation_menu_2
+ 14.07%    4.251      1 Template:Userdocnavi/fr
+ 10.97%    3.314      1 Template:GuiCommand/fr
+  8.46%    2.555      2 Template:Docnav/fr
+  7.69%    2.323      2 Template:Incode
+  6.74%    2.036      1 Template:Caption
+  6.08%    1.837      1 Template:Version/fr
+  5.90%    1.783      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260111145948 and revision id 1734495. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117132911 and revision id 1739432. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
