Updated page TechDraw 2PointCosmeticLine/fr

--- a/wiki/fr/TechDraw_2PointCosmeticLine.html
+++ b/wiki/fr/TechDraw_2PointCosmeticLine.html
@@ -103,14 +103,12 @@
 </p><p>Les lignes cosm&eacute;tiques peuvent &ecirc;tre cr&eacute;&eacute;es &agrave; l'aide des m&eacute;thodes <code>makeCosmeticLine(v1, v2)</code> ou <code>makeCosmeticLine3d(v1, v2)</code> de DrawViewPart.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/fr">Ligne centrale entre 2 points</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">Apparence des lignes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -150,15 +148,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117132911
+Cached time: 20260117132918
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.146 seconds
-Preprocessor visited node count: 422/1000000
-Post&#8208;expand include size: 27573/2097152 bytes
-Template argument size: 10662/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 421/1000000
+Post&#8208;expand include size: 27567/2097152 bytes
+Template argument size: 10658/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -166,19 +164,19 @@ Unstrip post&#8208;expand size: 1767/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.214      1 -total
- 26.00%    7.857      1 Template:TechDraw_Tools_navi/fr
- 18.82%    5.687      2 Template:Navigation_menu_2
- 14.07%    4.251      1 Template:Userdocnavi/fr
- 10.97%    3.314      1 Template:GuiCommand/fr
-  8.46%    2.555      2 Template:Docnav/fr
-  7.69%    2.323      2 Template:Incode
-  6.74%    2.036      1 Template:Caption
-  6.08%    1.837      1 Template:Version/fr
-  5.90%    1.783      2 Template:MenuCommand
+100.00%   37.456      1 -total
+ 26.66%    9.985      1 Template:TechDraw_Tools_navi/fr
+ 17.88%    6.696      2 Template:Navigation_menu_2
+ 13.23%    4.956      1 Template:Userdocnavi/fr
+ 11.36%    4.256      1 Template:GuiCommand/fr
+  9.12%    3.416      2 Template:Incode
+  7.58%    2.839      2 Template:Docnav/fr
+  7.43%    2.783      1 Template:Version/fr
+  7.09%    2.655      2 Template:MenuCommand
+  5.69%    2.133      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117132911 and revision id 1739432. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117132918 and revision id 1739434. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
