--- a/wiki/fr/TechDraw_2PointCosmeticLine.html
+++ b/wiki/fr/TechDraw_2PointCosmeticLine.html
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ajouter une ligne cosm&eacute;tique par 2 points
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Ligne cosm&eacute;tique par 2 points
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Ligne cosm&eacute;tique par 2 points</b> ajoute une ligne cosm&eacute;tique entre deux points. Les points peuvent &ecirc;tre en 2D ou en 3D. La ligne r&eacute;sultante peut &ecirc;tre utilis&eacute;e pour coter.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CosLine2PointsSample.png&amp;filetimestamp=20200819193706&amp;.html" class="mw-file-description"><img src="../File/CosLine2PointsSample.png" decoding="async" width="200" height="217" class="mw-file-element" data-file-width="239" data-file-height="259"></a></span>
@@ -148,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117132918
+Cached time: 20260117133020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 421/1000000
-Post&#8208;expand include size: 27567/2097152 bytes
-Template argument size: 10658/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.158 seconds
+Preprocessor visited node count: 420/1000000
+Post&#8208;expand include size: 27543/2097152 bytes
+Template argument size: 10634/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +162,19 @@ Unstrip post&#8208;expand size: 1767/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.456      1 -total
- 26.66%    9.985      1 Template:TechDraw_Tools_navi/fr
- 17.88%    6.696      2 Template:Navigation_menu_2
- 13.23%    4.956      1 Template:Userdocnavi/fr
- 11.36%    4.256      1 Template:GuiCommand/fr
-  9.12%    3.416      2 Template:Incode
-  7.58%    2.839      2 Template:Docnav/fr
-  7.43%    2.783      1 Template:Version/fr
-  7.09%    2.655      2 Template:MenuCommand
-  5.69%    2.133      1 Template:Caption
+100.00%   42.906      1 -total
+ 28.15%   12.079      1 Template:Version/fr
+ 15.69%    6.731      1 Template:TechDraw_Tools_navi/fr
+ 11.03%    4.734      1 Template:Userdocnavi/fr
+ 10.90%    4.676      2 Template:Navigation_menu_2
+  9.94%    4.264      2 Template:Docnav/fr
+  7.35%    3.154      1 Template:GuiCommand/fr
+  5.91%    2.536      2 Template:Incode
+  4.81%    2.064      1 Template:Caption
+  4.77%    2.045      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117132918 and revision id 1739434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117133020 and revision id 1739436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
