Updated page TechDraw 2PointCosmeticLine/fr

--- a/wiki/fr/TechDraw_2PointCosmeticLine.html
+++ b/wiki/fr/TechDraw_2PointCosmeticLine.html
@@ -60,17 +60,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez deux points dans une vue TechDraw ou deux points dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>.</li>
-<li>Si vous avez s&eacute;lectionn&eacute; des points dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S&eacute;lectionnez deux points dans une vue TechDraw ou deux points dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>.</li>
+<li>Si vous avez s&eacute;lectionn&eacute; des points dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne cosm&eacute;tique par 2 points</a></span>.</li>
-<li>S&eacute;lectionnez la <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne cosm&eacute;tique par 2 points </b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne cosm&eacute;tique par 2 points</a></span>.</li>
+<li>S&eacute;lectionnez la <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne cosm&eacute;tique par 2 points</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Ajustez &eacute;ventuellement les coordonn&eacute;es des points.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Une ligne cosm&eacute;tique reliant les deux points est ajout&eacute;e. Dans le cas de points 3D, la ligne relie la projection des points.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
@@ -146,15 +144,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133020
+Cached time: 20260117133127
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.158 seconds
-Preprocessor visited node count: 420/1000000
-Post&#8208;expand include size: 27543/2097152 bytes
-Template argument size: 10634/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 419/1000000
+Post&#8208;expand include size: 27518/2097152 bytes
+Template argument size: 10609/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -162,19 +160,19 @@ Unstrip post&#8208;expand size: 1767/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.906      1 -total
- 28.15%   12.079      1 Template:Version/fr
- 15.69%    6.731      1 Template:TechDraw_Tools_navi/fr
- 11.03%    4.734      1 Template:Userdocnavi/fr
- 10.90%    4.676      2 Template:Navigation_menu_2
-  9.94%    4.264      2 Template:Docnav/fr
-  7.35%    3.154      1 Template:GuiCommand/fr
-  5.91%    2.536      2 Template:Incode
-  4.81%    2.064      1 Template:Caption
-  4.77%    2.045      1 Template:KEY
+100.00%   24.639      1 -total
+ 25.08%    6.179      1 Template:TechDraw_Tools_navi/fr
+ 18.39%    4.532      2 Template:Navigation_menu_2
+ 17.27%    4.256      1 Template:Userdocnavi/fr
+  9.43%    2.323      1 Template:Version/fr
+  8.64%    2.130      2 Template:Docnav/fr
+  8.51%    2.096      1 Template:GuiCommand/fr
+  6.16%    1.519      1 Template:KEY
+  6.13%    1.510      2 Template:Incode
+  5.24%    1.292      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117133020 and revision id 1739436. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117133127 and revision id 1739438. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
