--- a/wiki/fr/TechDraw_2PointCosmeticLine.html
+++ b/wiki/fr/TechDraw_2PointCosmeticLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw 2PointCosmeticLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+2PointCosmeticLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PunkteHilfslinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_2PointCosmeticLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2PointCosmeticLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea cosmetica per 2 punti (74% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj lini&#281; kosmetyczn&#261; wytyczon&#261; przez dwa punkty (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2PointCosmeticLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2-&#1084;&#1103; &#1090;&#1086;&#1095;&#1082;&#1072;&#1084;&#1080;" (26% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -74,15 +74,13 @@
 <h2><span id=".C3.89dition"></span><span class="mw-headline" id="&Eacute;dition">&Eacute;dition</span></h2>
 <p>Pour modifier les extr&eacute;mit&eacute;s d'une ligne cosm&eacute;tique&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionner la ligne cosm&eacute;tique.</li>
+<ol><li>S&eacute;lectionnez la ligne cosm&eacute;tique.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter une ligne cosm&eacute;tique par 2 points</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter une ligne cosm&eacute;tique par 2 points</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ligne cosm&eacute;tique par 2 points</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ligne cosm&eacute;tique par 2 points</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Ajustez les coordonn&eacute;es des points.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -144,35 +142,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133127
+Cached time: 20260117133214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 419/1000000
-Post&#8208;expand include size: 27518/2097152 bytes
-Template argument size: 10609/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 418/1000000
+Post&#8208;expand include size: 27494/2097152 bytes
+Template argument size: 10585/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1767/5000000 bytes
+Unstrip post&#8208;expand size: 1771/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.639      1 -total
- 25.08%    6.179      1 Template:TechDraw_Tools_navi/fr
- 18.39%    4.532      2 Template:Navigation_menu_2
- 17.27%    4.256      1 Template:Userdocnavi/fr
-  9.43%    2.323      1 Template:Version/fr
-  8.64%    2.130      2 Template:Docnav/fr
-  8.51%    2.096      1 Template:GuiCommand/fr
-  6.16%    1.519      1 Template:KEY
-  6.13%    1.510      2 Template:Incode
-  5.24%    1.292      1 Template:Caption
+100.00%   28.834      1 -total
+ 26.68%    7.693      1 Template:TechDraw_Tools_navi/fr
+ 22.11%    6.375      2 Template:Navigation_menu_2
+ 16.02%    4.619      1 Template:Userdocnavi/fr
+  8.20%    2.363      2 Template:Docnav/fr
+  7.19%    2.073      2 Template:Incode
+  7.13%    2.057      2 Template:MenuCommand
+  7.04%    2.029      1 Template:GuiCommand/fr
+  7.02%    2.025      1 Template:Caption
+  6.40%    1.846      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117133127 and revision id 1739438. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210929-0!canonical and timestamp 20260117133214 and revision id 1739440. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
