--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Annotation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Annotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Beschriftung (56% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Beschriftung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Annotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Annotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Annotazione (56% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw adnotacj&#281; (56% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw adnotacj&#281; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1079;&#1072;&#1084;&#1077;&#1090;&#1082;&#1091;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#51452;&#49437; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_GeometricHatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/fr">Hachures g&eacute;om&eacute;triques</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de rep&egrave;re</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">Moins de d&eacute;cimales</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -164,35 +162,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145712
+Cached time: 20260117133352
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.222 seconds
-Preprocessor visited node count: 692/1000000
-Post&#8208;expand include size: 28541/2097152 bytes
-Template argument size: 10347/2097152 bytes
+CPU time usage: 0.109 seconds
+Real time usage: 0.229 seconds
+Preprocessor visited node count: 691/1000000
+Post&#8208;expand include size: 28661/2097152 bytes
+Template argument size: 10427/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2650/5000000 bytes
+Unstrip post&#8208;expand size: 2662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.744      1 -total
- 22.10%   17.844      1 Template:TechDraw_Tools_navi/fr
- 15.36%   12.400      2 Template:Navigation_menu_2
- 13.45%   10.862      9 Template:PropertyData/fr
- 11.97%    9.667      2 Template:Caption
- 10.02%    8.092      1 Template:GuiCommand/fr
-  9.87%    7.967      1 Template:Userdocnavi/fr
-  7.61%    6.148      2 Template:Docnav/fr
-  6.50%    5.250      9 Template:Variable
-  6.35%    5.131      1 Template:Code
+100.00%   70.178      1 -total
+ 24.00%   16.842      1 Template:Userdocnavi/fr
+ 22.21%   15.587      2 Template:Navigation_menu_2
+ 20.35%   14.278      1 Template:TechDraw_Tools_navi/fr
+ 13.32%    9.345      9 Template:PropertyData/fr
+  9.62%    6.749      2 Template:Button
+  7.25%    5.086      1 Template:Code
+  7.22%    5.066      9 Template:Variable
+  5.40%    3.790      1 Template:GuiCommand/fr
+  4.87%    3.421      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260111145712 and revision id 1734383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133352 and revision id 1739442. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
