--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -115,14 +115,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_GeometricHatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/fr">Hachures g&eacute;om&eacute;triques</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/fr">Ligne de rep&egrave;re</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">Moins de d&eacute;cimales</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -162,15 +160,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133352
+Cached time: 20260117133402
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.229 seconds
-Preprocessor visited node count: 691/1000000
-Post&#8208;expand include size: 28661/2097152 bytes
-Template argument size: 10427/2097152 bytes
+CPU time usage: 0.113 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 690/1000000
+Post&#8208;expand include size: 28781/2097152 bytes
+Template argument size: 10507/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -178,19 +176,19 @@ Unstrip post&#8208;expand size: 2662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.178      1 -total
- 24.00%   16.842      1 Template:Userdocnavi/fr
- 22.21%   15.587      2 Template:Navigation_menu_2
- 20.35%   14.278      1 Template:TechDraw_Tools_navi/fr
- 13.32%    9.345      9 Template:PropertyData/fr
-  9.62%    6.749      2 Template:Button
-  7.25%    5.086      1 Template:Code
-  7.22%    5.066      9 Template:Variable
-  5.40%    3.790      1 Template:GuiCommand/fr
-  4.87%    3.421      2 Template:Caption
+100.00%   36.036      1 -total
+ 21.33%    7.685      1 Template:TechDraw_Tools_navi/fr
+ 18.03%    6.499      9 Template:PropertyData/fr
+ 14.81%    5.338      2 Template:Navigation_menu_2
+ 13.35%    4.810      1 Template:Userdocnavi/fr
+ 10.19%    3.671      1 Template:GuiCommand/fr
+  8.16%    2.939      2 Template:Docnav/fr
+  8.04%    2.897      9 Template:Variable
+  6.44%    2.320      1 Template:Code
+  5.75%    2.072      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133352 and revision id 1739442. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133402 and revision id 1739444. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
