--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Annotation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Annotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Beschriftung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Annotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Annotation (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Annotazione (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw adnotacj&#281; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1079;&#1072;&#1084;&#1077;&#1090;&#1082;&#1091;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Annotation</b> ajoute un bloc de texte &agrave; une feuille de dessin.
 </p><p><span typeof="mw:File"><a href="../index.php?title=AnnotationSample.png&amp;filetimestamp=20160826145120&amp;.html" class="mw-file-description"><img src="../File/AnnotationSample.png" decoding="async" width="250" height="105" class="mw-file-element" data-file-width="279" data-file-height="117"></a></span>
@@ -160,35 +158,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133402
+Cached time: 20260117133635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.162 seconds
-Preprocessor visited node count: 690/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.212 seconds
+Preprocessor visited node count: 689/1000000
 Post&#8208;expand include size: 28781/2097152 bytes
 Template argument size: 10507/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2662/5000000 bytes
+Unstrip post&#8208;expand size: 2663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.036      1 -total
- 21.33%    7.685      1 Template:TechDraw_Tools_navi/fr
- 18.03%    6.499      9 Template:PropertyData/fr
- 14.81%    5.338      2 Template:Navigation_menu_2
- 13.35%    4.810      1 Template:Userdocnavi/fr
- 10.19%    3.671      1 Template:GuiCommand/fr
-  8.16%    2.939      2 Template:Docnav/fr
-  8.04%    2.897      9 Template:Variable
-  6.44%    2.320      1 Template:Code
-  5.75%    2.072      2 Template:MenuCommand
+100.00%   54.813      1 -total
+ 18.21%    9.984      1 Template:TechDraw_Tools_navi/fr
+ 14.86%    8.143      9 Template:PropertyData/fr
+ 11.05%    6.059      2 Template:Navigation_menu_2
+ 10.54%    5.780      2 Template:Docnav/fr
+  9.42%    5.164      6 Template:Incode
+  8.16%    4.471      1 Template:Userdocnavi/fr
+  8.13%    4.455      2 Template:Caption
+  8.01%    4.390      2 Template:MenuCommand
+  7.98%    4.374      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133402 and revision id 1739444. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133635 and revision id 1739446. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
