--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -60,8 +60,7 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une annotation</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Annotations &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Annotation.svg&amp;filetimestamp=20241127175332&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Annotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une annotation</b> du menu.</li></ul></li>
@@ -69,9 +68,8 @@
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Un bloc de texte contenant le <i>Texte par d&eacute;faut</i> appara&icirc;t sur la feuille.</li></ol></li>
-<li>Utilisez l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a> pour modifier le texte.</li>
+<li>Utilisez l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a> pour modifier le texte.</li>
 <li>Vous pouvez faire glisser l'annotation vers une autre position.</li></ol>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=UpdateAnnotation.png&amp;filetimestamp=20160826145146&amp;.html" class="mw-file-description"><img src="../File/UpdateAnnotation.png" decoding="async" width="367" height="251" class="mw-file-element" data-file-width="367" data-file-height="251"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -158,13 +156,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133635
+Cached time: 20260117133731
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.212 seconds
-Preprocessor visited node count: 689/1000000
+CPU time usage: 0.097 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 688/1000000
 Post&#8208;expand include size: 28781/2097152 bytes
 Template argument size: 10507/2097152 bytes
 Highest expansion depth: 8/100
@@ -174,19 +172,19 @@ Unstrip post&#8208;expand size: 2663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.813      1 -total
- 18.21%    9.984      1 Template:TechDraw_Tools_navi/fr
- 14.86%    8.143      9 Template:PropertyData/fr
- 11.05%    6.059      2 Template:Navigation_menu_2
- 10.54%    5.780      2 Template:Docnav/fr
-  9.42%    5.164      6 Template:Incode
-  8.16%    4.471      1 Template:Userdocnavi/fr
-  8.13%    4.455      2 Template:Caption
-  8.01%    4.390      2 Template:MenuCommand
-  7.98%    4.374      1 Template:GuiCommand/fr
+100.00%   38.074      1 -total
+ 23.23%    8.844      1 Template:TechDraw_Tools_navi/fr
+ 21.57%    8.214      9 Template:PropertyData/fr
+ 17.11%    6.515      2 Template:Navigation_menu_2
+ 13.09%    4.984      1 Template:Userdocnavi/fr
+ 11.58%    4.408      1 Template:GuiCommand/fr
+  9.98%    3.801      9 Template:Variable
+  6.83%    2.601      1 Template:Code
+  5.59%    2.130      2 Template:Docnav/fr
+  3.93%    1.497      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133635 and revision id 1739446. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133731 and revision id 1739448. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
