--- a/wiki/fr/TechDraw_Annotation.html
+++ b/wiki/fr/TechDraw_Annotation.html
@@ -72,9 +72,7 @@
 <li>Vous pouvez faire glisser l'annotation vers une autre position.</li></ol>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=UpdateAnnotation.png&amp;filetimestamp=20160826145146&amp;.html" class="mw-file-description"><img src="../File/UpdateAnnotation.png" decoding="async" width="367" height="251" class="mw-file-element" data-file-width="367" data-file-height="251"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Modification de l'annotation via l'&eacute;diteur de propri&eacute;t&eacute;s</p>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -156,13 +154,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117133731
+Cached time: 20260117133738
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.146 seconds
-Preprocessor visited node count: 688/1000000
+CPU time usage: 0.095 seconds
+Real time usage: 0.131 seconds
+Preprocessor visited node count: 687/1000000
 Post&#8208;expand include size: 28781/2097152 bytes
 Template argument size: 10507/2097152 bytes
 Highest expansion depth: 8/100
@@ -172,19 +170,19 @@ Unstrip post&#8208;expand size: 2663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.074      1 -total
- 23.23%    8.844      1 Template:TechDraw_Tools_navi/fr
- 21.57%    8.214      9 Template:PropertyData/fr
- 17.11%    6.515      2 Template:Navigation_menu_2
- 13.09%    4.984      1 Template:Userdocnavi/fr
- 11.58%    4.408      1 Template:GuiCommand/fr
-  9.98%    3.801      9 Template:Variable
-  6.83%    2.601      1 Template:Code
-  5.59%    2.130      2 Template:Docnav/fr
-  3.93%    1.497      2 Template:Caption
+100.00%   35.079      1 -total
+ 24.17%    8.478      1 Template:TechDraw_Tools_navi/fr
+ 18.27%    6.407      9 Template:PropertyData/fr
+ 16.46%    5.773      2 Template:Navigation_menu_2
+ 11.74%    4.118      1 Template:Userdocnavi/fr
+ 10.94%    3.837      1 Template:GuiCommand/fr
+  9.00%    3.157      9 Template:Variable
+  7.53%    2.642      2 Template:Docnav/fr
+  6.71%    2.354      1 Template:Code
+  4.99%    1.751      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133731 and revision id 1739448. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180867-0!canonical and timestamp 20260117133737 and revision id 1739450. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
