Updated page TechDraw Balloon/fr

--- a/wiki/fr/TechDraw_Balloon.html
+++ b/wiki/fr/TechDraw_Balloon.html
@@ -125,14 +125,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/fr">Cote verticale chanfrein</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/fr">Cote axonom&eacute;trique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -172,15 +170,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135736
+Cached time: 20260117135748
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.166 seconds
-Preprocessor visited node count: 985/1000000
-Post&#8208;expand include size: 28723/2097152 bytes
-Template argument size: 10463/2097152 bytes
+CPU time usage: 0.140 seconds
+Real time usage: 0.198 seconds
+Preprocessor visited node count: 984/1000000
+Post&#8208;expand include size: 28621/2097152 bytes
+Template argument size: 10395/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -188,19 +186,19 @@ Unstrip post&#8208;expand size: 2325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.911      1 -total
- 20.09%    8.823     12 Template:PropertyData
- 17.10%    7.508      1 Template:TechDraw_Tools_navi/fr
- 15.55%    6.828     17 Template:Variable
- 11.45%    5.030      2 Template:Navigation_menu_2
- 10.12%    4.443      5 Template:PropertyView
- 10.10%    4.434      1 Template:MenuCommand
-  8.55%    3.755      1 Template:Userdocnavi/fr
-  8.47%    3.719      1 Template:Code
-  7.38%    3.243      2 Template:Docnav/fr
+100.00%   55.911      1 -total
+ 20.98%   11.731     12 Template:PropertyData
+ 17.93%   10.026      1 Template:TechDraw_Tools_navi/fr
+ 15.83%    8.851      2 Template:Docnav/fr
+ 15.05%    8.415     17 Template:Variable
+ 14.43%    8.066      2 Template:Navigation_menu_2
+  8.78%    4.911      1 Template:Userdocnavi/fr
+  8.48%    4.739      5 Template:PropertyView
+  7.21%    4.029      1 Template:Code
+  6.66%    3.724      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135736 and revision id 1739490. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135748 and revision id 1739492. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
