Updated page TechDraw ComplexSection/fr

--- a/wiki/fr/TechDraw_ComplexSection.html
+++ b/wiki/fr/TechDraw_ComplexSection.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ComplexSection/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ComplexSection&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw KomplexerSchnitt (70% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw KomplexerSchnitt (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ComplexSection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ComplexSection (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Sezione complessa (70% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw przekr&oacute;j z&#322;o&#380;ony (70% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw przekr&oacute;j z&#322;o&#380;ony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#48373;&#54633;&#45800;&#47732; (35% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SectionView.html" title="TechDraw SectionView/fr">Vue en coupe</a></div>
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Vues de Techdraw &rarr; Ins&eacute;rer une vue en coupe complexe
+<td class="ctEven">TechDraw &rarr; Vues de l'atelier Techdraw &rarr; Ins&eacute;rer une vue en coupe complexe
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Vue en coupe complexe</b> ins&egrave;re une vue en coupe transversale bas&eacute;e sur une vue de la pi&egrave;ce existante et un profil.
@@ -187,35 +185,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110171018
+Cached time: 20260117140643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.201 seconds
-Preprocessor visited node count: 623/1000000
-Post&#8208;expand include size: 28748/2097152 bytes
-Template argument size: 10830/2097152 bytes
+CPU time usage: 0.130 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 622/1000000
+Post&#8208;expand include size: 28768/2097152 bytes
+Template argument size: 10850/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4373/5000000 bytes
+Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.963      1 -total
- 27.34%   15.028      4 Template:PropertyData
- 23.03%   12.660      4 Template:Variable
- 16.47%    9.051      1 Template:Userdocnavi/fr
- 13.29%    7.305      1 Template:TitleProperty
- 13.16%    7.235      1 Template:TechDraw_Tools_navi/fr
-  9.71%    5.338      2 Template:Navigation_menu_2
-  4.97%    2.732      1 Template:Code
-  4.54%    2.497      1 Template:GuiCommand/fr
-  4.28%    2.352      2 Template:Docnav/fr
+100.00%   48.126      1 -total
+ 16.75%    8.059      4 Template:PropertyData
+ 16.55%    7.967      1 Template:TechDraw_Tools_navi/fr
+ 13.72%    6.605      2 Template:Navigation_menu_2
+ 11.19%    5.387      4 Template:Variable
+ 10.20%    4.907      1 Template:Userdocnavi/fr
+  8.30%    3.997      1 Template:TitleProperty
+  7.82%    3.765      3 Template:Value
+  7.23%    3.481      1 Template:Code
+  6.33%    3.048      3 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260110171018 and revision id 1731345. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260117140642 and revision id 1739516. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
